--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -8,13 +8,16 @@
         android:name="ru.androidschool.intensiv.ui.feed.FeedFragment"
         android:label="@string/home"
         tools:layout="@layout/feed_fragment">
-
+        <action
+            android:id="@+id/action_home_dest_to_movie_details_fragment"
+            app:destination="@id/movie_details_fragment" />
     </fragment>
 
+<!--
     <fragment
         android:id="@+id/flow_step_one_dest"
         android:name="ru.androidschool.intensiv.ui.movie_details.MovieDetailsFragment"
-        tools:layout="@layout/movie_details_fragment">
+        tools:layout="@layout/fragment_movie_details">
         <argument
             android:name="flowStepNumber"
             android:defaultValue="1"
@@ -28,7 +31,7 @@
     <fragment
         android:id="@+id/flow_step_two_dest"
         android:name="ru.androidschool.intensiv.ui.movie_details.MovieDetailsFragment"
-        tools:layout="@layout/movie_details_fragment">
+        tools:layout="@layout/fragment_movie_details">
 
         <argument
             android:name="flowStepNumber"
@@ -39,6 +42,7 @@
             android:id="@+id/next_action"
             app:popUpTo="@id/home_dest" />
     </fragment>
+-->
 
     <fragment
         android:id="@+id/tv_shows_dest"
@@ -53,8 +57,13 @@
     <fragment
         android:id="@+id/movie_details_fragment"
         android:name="ru.androidschool.intensiv.ui.movie_details.MovieDetailsFragment"
-        android:label="details_fragment"
-        tools:layout="@layout/movie_details_fragment" />
+        android:label="fragment_details"
+        tools:layout="@layout/fragment_movie_details" >
+        <argument
+            android:name="movieId"
+            app:argType="long"
+            android:defaultValue="0L" />
+    </fragment>
     <fragment
         android:id="@+id/profile_fragment"
         android:name="ru.androidschool.intensiv.ui.profile.ProfileFragment"
@@ -63,6 +72,6 @@
     <fragment
         android:id="@+id/search_dest"
         android:name="ru.androidschool.intensiv.ui.search.SearchFragment"
-        android:label="SearchFragment"
+        android:label="fragment_search"
         tools:layout="@layout/fragment_search" />
 </navigation>
