--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -2,6 +2,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
     android:fitsSystemWindows="true">
 
     <include layout="@layout/feed_header" />
@@ -25,6 +26,8 @@
                 android:background="@color/blueDark"
                 android:overScrollMode="never"
                 android:scrollbars="vertical"
+                tools:itemCount="4"
+                tools:listitem="@layout/item_search_movie_preview"
                 app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                 app:layout_behavior="@string/appbar_scrolling_view_behavior" />
         </LinearLayout>
