--- a/app/src/main/res/layout/item_tv_show.xml
+++ b/app/src/main/res/layout/item_tv_show.xml
@@ -17,7 +17,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize10Percent"
+        app:shapeAppearanceOverlay="@style/CornerSize10Percent"
         tools:background="@color/white" />
 
     <TextView
