--- a/app/src/main/res/layout/item_with_text.xml
+++ b/app/src/main/res/layout/item_with_text.xml
@@ -18,7 +18,7 @@
         android:layout_width="@dimen/movie_card_width"
         android:layout_height="@dimen/movie_card_height"
         android:scaleType="centerCrop"
-        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize10Percent"
+        app:shapeAppearanceOverlay="@style/CornerSize10Percent"
         tools:background="@color/white"
         tools:src="@drawable/ic_avatar" />
 
