--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -17,11 +17,11 @@
         <item name="android:textSize">48sp</item>
     </style>
 
-    <style name="ShapeAppearanceOverlay.App.CornerSize10Percent" parent="">
+    <style name="CornerSize10Percent">
         <item name="cornerSize">10%</item>
     </style>
 
-    <style name="DetailImageStyle" parent="" >
+    <style name="DetailImageStyle">
         <item name="cornerSizeBottomLeft">10%</item>
         <item name="cornerSizeBottomRight">10%</item>
     </style>
