--- a/app/src/main/res/layout/fragment_tv_shows.xml
+++ b/app/src/main/res/layout/fragment_tv_shows.xml
@@ -1,10 +1,20 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorPrimary"
-    tools:context="ru.androidschool.intensiv.ui.tvshows.TvShowsFragment">
+    tools:context="ru.androidschool.intensiv.ui.tvshows.TvShowsFragment"
+    android:orientation="vertical">
+
+    <ru.androidschool.intensiv.ui.custom.MovieProgressFormView
+        android:id="@+id/progress_view"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingVertical="@dimen/dimens_32"
+        android:visibility="visible"
+        app:progress_backgroundColor="@color/colorPrimary" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:background="@color/colorPrimary"
@@ -16,4 +26,5 @@
         tools:itemCount="4"
         tools:listitem="@layout/item_tv_show" />
 
-</FrameLayout>
+
+</LinearLayout>
