--- a/app/src/main/res/layout/fragment_movie_details.xml
+++ b/app/src/main/res/layout/fragment_movie_details.xml
@@ -52,8 +52,8 @@
 
         <ImageView
             android:id="@+id/like_image"
-            android:layout_width="32dp"
-            android:layout_height="32dp"
+            android:layout_width="@dimen/material_margin_large"
+            android:layout_height="@dimen/material_margin_large"
             android:layout_marginHorizontal="@dimen/material_margin_normal"
             android:layout_marginTop="8dp"
             android:src="@drawable/ic_like"
