--- a/app/src/main/res/layout/fragment_movie_details.xml
+++ b/app/src/main/res/layout/fragment_movie_details.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/blueDark"
-    tools:context="ru.androidschool.intensiv.presentation.movie_details.MovieDetailsFragment">
+    tools:context="ru.androidschool.intensiv.presentation.movie_details.fragment.MovieDetailsFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/detail_constraint_layout"
